--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="@@enderecoDoCss">
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
@@ -15,13 +15,17 @@
 <body>
     <main>
         <h1>Sorteador</h1>
-        <form>
+        <form id="form">
             <div>
                 <label for="maxNum">Número máximo</label>
-                <input type="number" id="maxNum">
+                <input type="number" id="maxNum" required min="2" value="2" step="1">
             </div>
             <button type="submit">Sortear Número</button>
         </form>
+        <div class="text-result">
+            O número sorteado foi : <span id="result"></span>
+        </div>
     </main>
+    <script src="../src/scripts/main.js"></script>
 </body>
 </html>
